--- a/lab_1/lab_1.ipynb
+++ b/lab_1/lab_1.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -127,7 +127,7 @@
        "3.14"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -149,7 +149,7 @@
        "4.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -203,7 +203,7 @@
        "'l'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -225,7 +225,7 @@
        "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -247,7 +247,7 @@
        "1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -280,7 +280,7 @@
        "[2, 4, 6]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -304,7 +304,7 @@
        "[0, 1, 2, 3]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -327,7 +327,7 @@
        "[9, 8]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -382,7 +382,7 @@
      "evalue": "cannot assign to True (819858463.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[20], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    True = \"the sky is blue\"\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to True\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[14], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    True = \"the sky is blue\"\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to True\n"
      ]
     }
    ],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -441,7 +441,7 @@
        "11"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -464,7 +464,7 @@
        "2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -487,7 +487,7 @@
        "1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -517,7 +517,7 @@
        "[2, 3, 4, 5, 6, 7]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -540,7 +540,7 @@
        "[1, 2, 1, 2, 1, 2, 1, 2]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -570,7 +570,7 @@
        "{1, 3}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -593,7 +593,7 @@
        "{'a', 'b', 'c', 'd', 'f'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -637,7 +637,7 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -660,7 +660,7 @@
        "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -692,7 +692,7 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -714,7 +714,7 @@
        "False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -744,7 +744,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -785,7 +785,7 @@
        "'good stuff'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -814,7 +814,7 @@
        "'good stuff'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -847,7 +847,7 @@
        "'different stuff'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -886,7 +886,7 @@
        "'medium stuff'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
@@ -1021,7 +1021,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -1044,7 +1044,7 @@
        "float"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -1066,7 +1066,7 @@
        "[1, 2, 4, 5, 10, 12, 37]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -1098,7 +1098,7 @@
        "'/Users/manojdannana/Documents/GitHub/projects/lab_1'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
@@ -1121,7 +1121,7 @@
        "['.DS_Store', 'labutil', 'lab_1.ipynb', '.ipynb_checkpoints', 'data']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -1144,7 +1144,7 @@
        "1.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -1259,7 +1259,7 @@
        "['this', 'is', 'a', 'string']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -1282,7 +1282,7 @@
        "[1, 2, 4, 5, 7, 8, 10]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "metadata": {
     "tags": []
    },
@@ -1307,7 +1307,7 @@
        "403"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
@@ -1342,7 +1342,7 @@
        " ('said', 460)]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -1372,7 +1372,7 @@
        "[0, 2, 4, 6, 8]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
@@ -1434,7 +1434,7 @@
        " ('rabbit', 53)]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,12 +1553,12 @@
     "        if re.match(\"\\d+\", i):\n",
     "            nums.append(int(i))\n",
     "            \n",
-    "    return sorted(nums)[-1]"
+    "    return sorted(nums, reverse=True)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1567,7 @@
        "6221541"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
        "5.5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
