--- a/lab_4/lab_4-2.ipynb
+++ b/lab_4/lab_4-2.ipynb
@@ -1669,6 +1669,164 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a5bf6b3-a167-4f50-b546-f0319b9d65f4",
+   "metadata": {},
+   "source": [
+    "#### Group By using title and sum of proportion_in_dialogue for every group should be 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 514,
+   "id": "423524e4-7007-4142-8de7-0c26a285cff2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_films_filter = df_films.groupby('title')['proportion_of_dialogue'].agg('sum').reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 515,
+   "id": "7495af04-7e33-4b11-8124-879d7a319548",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>sum_proportion_of_dialogue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(500) Days of Summer</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10 Things I Hate About You</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12 Years a Slave</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12 and Holding</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>127 Hours</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        title  sum_proportion_of_dialogue\n",
+       "0        (500) Days of Summer                         1.0\n",
+       "1  10 Things I Hate About You                         1.0\n",
+       "2            12 Years a Slave                         1.0\n",
+       "3              12 and Holding                         1.0\n",
+       "4                   127 Hours                         1.0"
+      ]
+     },
+     "execution_count": 515,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_films_filter.columns = [\"title\",\"sum_proportion_of_dialogue\"]\n",
+    "df_films_filter['sum_proportion_of_dialogue'] = df_films_filter['sum_proportion_of_dialogue'].round()\n",
+    "df_films_filter.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 516,
+   "id": "1d537805-5778-48e6-8bdc-f82383bbdcfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>sum_proportion_of_dialogue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [title, sum_proportion_of_dialogue]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 516,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_films_filter[df_films_filter[\"sum_proportion_of_dialogue\"]!=1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "035b42dc-cd7c-4bc6-8fd7-d8bce7104330",
+   "metadata": {},
+   "source": [
+    "There is No title with proportion_of_dialogue not equal to 1, so "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f0802017-2763-484a-a3a8-d37775ae9eb3",
    "metadata": {
     "tags": []
