--- a/lab_4/lab_4-2.ipynb
+++ b/lab_4/lab_4-2.ipynb
@@ -1822,7 +1822,7 @@
    "id": "035b42dc-cd7c-4bc6-8fd7-d8bce7104330",
    "metadata": {},
    "source": [
-    "There is No title with proportion_of_dialogue not equal to 1, so "
+    "There is No title with proportion_of_dialogue not equal to 1, so the gut check is complete"
    ]
   },
   {
